<resources>
    <string name="app_name">TopDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="fmale">Fmale</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="education">Education</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="password">Password</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="entername">Please Enter Name</string>
    <string name="enterlastname">Please Enter Last Name</string>
    <string name="entermobile">Please Enter Mobile</string>
    <string name="eduDetails">\"Please Enter Education Details \"</string>
    <string name="entercountry">Please Enter Country</string>
    <string name="enterpassword">Please Enter Password</string>
    <string name="invalideMobile">Invalid Mobile</string>
</resources>